<resources>
    <string name="app_name">WhatsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- Fragments-->
    <string name="contacts_fragment">Contacts Fragment</string>
    <string name="chats_fragment">Chats Fragment</string>
    <string name="groups_fragment">Groups Fragment</string>
    <!-- Login Activity Strings-->
    <string name="Login">Login</string>
    <string name="user_email">Email</string>
    <string name="user_pass">Password</string>
    <string name="login_user_forget_pass">Forget Password?</string>
    <string name="button_login">Login</string>
    <string name="text_or">OR</string>
    <string name="text_dont_have_account">Dont have account? </string>
    <string name="login_create_new_account_text">Create New Account</string>
    <string name="button_login_phone">Login Using Phone</string>
    <!--Register User strings-->
    <string name="edit_text_name_register_hint_user">Name</string>
    <string name="edit_text_address_register_hint_user">Address</string>
    <string name="text_phone_register_user">Phone</string>
    <string name="edit_text_register_user">Register</string>
    <string name="edit_text_email_register_user">Email</string>
    <string name="edit_text_Password_register_user">Password</string>
    <string name="button_register_user">Create Account</string>
    <string name="already_have_account">Already Have An Account?</string>
    <!-- Menu -->
    <string name="find_friends">Find Friends</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="create_group">Create Group</string>
    <!-- settings strings -->
    <string name="hint_name_settings">User Name</string>
    <string name="hint_statues_settings">Statues</string>
    <string name="button_update_settings">Update Statues</string>
    <!-- group chat activity-->
    <string name="edit_text_message">Type a message</string>
    <!--phone activity-->
    <string name="edit_text_enter_number">Phone Number</string>
    <string name="edit_text_verification_code">Code</string>
    <string name="send_code_button">Send Code</string>
    <string name="verify_account_button">Verify</string>
    <!--find friends activity -->
    <string name="user_name_find_friends">user name</string>
    <string name="user_status_find_friends">user statues</string>
    <string name="button_accept">Accept</string>
    <string name="button_deny">Deny</string>
    <!-- profile activity -->
    <string name="user_name_profile">user name</string>
    <string name="user_statues_profile">Hey Im using WhatsApp</string>
    <string name="user_send_request_button">Send Message</string>
    <string name="user_cancel_request_button">Cancel Request</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--custom chat bar strings-->
    <string name="user_name_chat_bar">Display User Name</string>
    <string name="user_last_seen_bar">Last Seen</string>
    <!-- message layout strings-->
    <string name="text_view_receiver_message">receiver message here</string>
    <string name="text_view_sender_message">sender message here</string>



</resources>