<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:layout_centerVertical="true">


  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="15"
        android:text="@string/edit_text_register_user"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        android:textStyle="bold"
        />


      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:orientation="vertical"
          android:padding="16dp"
          >
        <EditText
            android:id="@+id/edit_text_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_email_register_user"
            android:inputType="textEmailAddress"
            android:background="@drawable/inputs"
            android:layout_margin="10dp"

            android:padding="16dp"
            />
        <EditText
            android:id="@+id/edit_text_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_text_Password_register_user"
            android:inputType="textPassword"
            android:padding="16dp"
            android:layout_margin="10dp"
            android:background="@drawable/inputs"
            android:layout_below="@id/edit_text_email_register"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="36dp"
            android:background="@drawable/confirm_button"
            android:padding="16dp"
            android:text="@string/button_register_user"
            android:textColor="@android:color/white"
            android:id="@+id/button_register"
            android:layout_below="@id/edit_text_password_register"
            android:layout_centerInParent="true"
            android:layout_margin="30dp" />
        <TextView
            android:id="@+id/already_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/already_have_account"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@id/button_register"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"/>

      </RelativeLayout>


  </LinearLayout>




  <!--
  -->
</RelativeLayout>