<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="15"
            android:text="@string/Login"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText

                    android:id="@+id/login_email_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="17dp"
                    android:hint="@string/user_email"
                    android:inputType="textEmailAddress|textMultiLine"
                    android:padding="8dp" />

                <EditText
                    android:id="@+id/login_password_user"
                    android:layout_width="match_parent"
                    android:layout_below="@id/login_email_user"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="17dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="17dp"
                    android:hint="@string/user_pass"
                    android:inputType="textPassword"
                    android:padding="8dp" />


                <TextView
                    android:id="@+id/forget_password_link_login_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login_password_user"
                    android:layout_marginTop="17dp"
                    android:text="@string/login_user_forget_pass"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/login_button_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="19dp"
                    android:background="@drawable/buttons"
                    android:text="@string/button_login"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    android:layout_below="@id/forget_password_link_login_user"/>


                <com.google.android.gms.common.SignInButton
                    android:id="@+id/login_button_user_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_marginTop="8dp"
                    android:layout_below="@id/login_button_user"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text=""
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_below="@id/login_button_user"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/text_or"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_dont_have_account"
                    android:layout_below="@id/login_button_user_google"
                    android:text="@string/text_dont_have_account"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/login_create_new_account_text_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="19dp"
                    android:text="@string/login_create_new_account_text"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_below="@id/login_button_user_google"
                    android:layout_toEndOf="@id/text_dont_have_account"
                    android:layout_marginTop="8dp"/>


            </RelativeLayout>


    </LinearLayout>


    <!--
    -->
</RelativeLayout>