<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/profile_image"
            android:id="@+id/users_profile_image"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="200dp"
                    android:id="@+id/user_profile_name"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name_find_friends"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:id="@+id/user_profile_status"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/online"
                    android:visibility="invisible"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_status_find_friends"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:id="@+id/user_status"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_accept"
                    android:text="@string/button_accept"
                    android:id="@+id/button_accept"
                    android:textAllCaps="false"
                    android:visibility="invisible"
                    />
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_deny"
                    android:text="@string/button_deny"
                    android:id="@+id/button_deny"
                    android:textAllCaps="false"
                    android:layout_marginStart="5dp"
                    android:visibility="invisible"
                    />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>