<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:src="@drawable/profile_image"
        android:id="@+id/visit_profile_image"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name_profile"
        android:layout_below="@id/visit_profile_image"
        android:id="@+id/user_name_profile"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_statues_profile"
        android:layout_below="@id/user_name_profile"
        android:id="@+id/user_statues_profile"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />
<Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="65dp"
    android:layout_marginRight="65dp"
    android:layout_below="@id/user_statues_profile"
    android:background="@drawable/buttons"
    android:text="@string/user_send_request_button"
    android:textColor="@android:color/white"
    android:layout_centerInParent="true"
    android:layout_marginTop="150dp"
    android:id="@+id/button_send_request"
    android:textAllCaps="false" />

</RelativeLayout>