<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/set_profile_image_settings"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:src="@drawable/profile_image"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimary"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/set_user_name_settings"
        android:layout_below="@id/set_profile_image_settings"
        android:inputType="textMultiLine"
        android:hint="@string/hint_name_settings"
        android:background="@drawable/inputs"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:layout_margin="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/set_user_statues_settings"
        android:layout_below="@id/set_user_name_settings"
        android:inputType="textMultiLine"
        android:hint="@string/hint_statues_settings"
        android:background="@drawable/inputs"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:layout_margin="10dp"
       />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/update_settings_button"
        android:layout_below="@id/set_user_statues_settings"
        android:text="@string/button_update_settings"
        android:background="@drawable/buttons"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:layout_margin="10dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        />

</RelativeLayout>